--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "peerDependencies": {
     "react": "^15.3.1",
+    "react-measure": "^1.4.7",
     "wavesurfer.js": "^1.1.11"
   },
   "devDependencies": {
