--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "url": "https://github.com/mspae/react-wavesurfer/issues"
   },
   "peerDependencies": {
-    "react": "^15.3.1",
-    "react-measure": "^1.4.7",
-    "wavesurfer.js": "^1.1.11"
+    "react": "^16.9.0",
+    "prop-types": "^15.5.10",
+    "react-measure": "^2.3.0"
   },
   "devDependencies": {
     "babel": "^6.5.x",
@@ -54,11 +54,11 @@
     "jscs-loader": "^0.3.0",
     "jsx-loader": "^0.13.2",
     "npm-run-all": "^3.0.0",
-    "react": "^15.3.1",
+    "wavesurfer.js": "https://github.com/tf/wavesurfer.js#patches",
+    "react": "^16.9.0",
     "react-addons-test-utils": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-hot-loader": "^1.3.0",
-    "wavesurfer.js": "^1.1.11",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0"
   },
